<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lart_to_pacsim_bridge</name>
  <version>0.1.0</version>
  <description>Bridge node converting LART custom messages to PacSim inputs.</description>
  <maintainer email="lart-nano@todo.todo">lart-nano</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rlcpp</depend>
  <depend>lart_msgs</depend>
  <depend>pacsim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
